--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@chakra-ui/react": "^2.2.1",
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
+    "@fontsource/fraunces": "^4.5.6",
+    "@fontsource/open-sans": "^4.5.10",
     "framer-motion": "^6.4.3",
     "next": "12.2.1",
     "react": "18.2.0",
